--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,41 @@
-flask==2.0.1
-SpeechRecognition==3.8.1
-transformers==4.30.2
-torch==2.6.0
-soundfile==0.12.1
-numpy==1.24.3
-PyQt6==6.4.2
-pyqt6-tools==6.4.2.3.2
+# Dependencias principales del servidor web
+Flask==3.0.0
+Werkzeug==3.0.1
+
+# Dependencias para el modelo de traducción
+transformers==4.35.2
+torch==2.1.1
+tokenizers==0.15.0
+safetensors==0.4.1
+
+# Dependencias para procesamiento de datos
+numpy==1.24.4
+pandas==2.1.4
+scipy==1.11.4
+
+# Dependencias para manejo de archivos JSON y texto
+typing-extensions==4.8.0
+
+# Dependencias para logging y configuración
 python-dotenv==1.0.0
-Pillow==10.0.0
+
+# Dependencias opcionales para reconocimiento de voz (lado cliente)
+# Nota: SpeechRecognition se maneja en el navegador con Web Speech API
+
+# Dependencias para procesamiento de imágenes (si se necesita)
+Pillow==10.1.0
+
+# Dependencias para desarrollo y testing
+pytest==7.4.3
+pytest-flask==1.3.0
+
+# Dependencias del sistema
+requests==2.31.0
+urllib3==2.1.0
+
+# Dependencias para manejo de archivos de audio (opcional)
+soundfile==0.12.1
+
+# Dependencias para compatibilidad
+six==1.16.0
+certifi==2023.11.17
